# sameli

./: Dockerfile  README.md  pyproject.toml  requirements.txt
conf/: dummy_model.yaml  local.yaml  torch_model.yaml  transformer_model.yaml
dev/: docker-compose.yaml  prometheus.yml
sameli/: __init__.py  __main__.py  conf.py  kafka.py  metrics.py  redis.py  server.py  utils.py
sameli/integration/: __init__.py  http.py  kafka.py
sameli/models/: __init__.py  base.py  dummy.py  pytorch.py  transformer.py
sameli/routers/: __init__.py  liveness.py  model.py
tests/: test_kafka.py  test_locust.py  test_pytorch.py  test_redis.py  test_server.py
